--- a/Timesheets/Views/Charts/Index.cshtml
+++ b/Timesheets/Views/Charts/Index.cshtml
@@ -3,11 +3,45 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+    <div class="content-wrapper">
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 form-group">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-<canvas id="BarChart" width="300" height="200"></canvas>
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-6 offset-3">
+                        <!-- Pie CHART -->
+                        <div class="card card-success">
+                            <div class="card-header">
+                                <h3 class="card-title">Pie Chart</h3>
+                                <div class="card-tools">
+                                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                        <i class="fas fa-minus"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <div class="chart">
+                                    <canvas id="PieChart" width="300" height="200"></canvas>
+                                </div>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-
 @section scripts{
     <script>
         $(document).ready(function () {
@@ -29,9 +63,9 @@
 
 
         function renderChart(labels, data) {
-            var ctx = document.getElementById("BarChart");
+            var ctx = document.getElementById("PieChart");
             var chart = new Chart(ctx, {
-                type: 'bar',
+                type: 'pie',
                 data: {
                     labels: labels,
                     datasets: [{
@@ -60,7 +94,7 @@
                     yAxes: [{
                         ticks: {   beginAtZero: true  }
                     }]
-                    }       
+                    }
                 }
             });
         }
