--- a/Timesheets/Views/Shared/_Layout.cshtml
+++ b/Timesheets/Views/Shared/_Layout.cshtml
@@ -22,25 +22,7 @@
                  <li class="nav-item">
                      <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
                  </li>
-                 <li class="nav-item d-none d-sm-inline-block">
-                     <a href="../../index3.html" class="nav-link">Home</a>
-                 </li>
-                 <li class="nav-item d-none d-sm-inline-block">
-                     <a href="#" class="nav-link">Contact</a>
-                 </li>
              </ul>
-
-             <!-- SEARCH FORM -->
-             <form class="form-inline ml-3">
-                 <div class="input-group input-group-sm">
-                     <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                     <div class="input-group-append">
-                         <button class="btn btn-navbar" type="submit">
-                             <i class="fas fa-search"></i>
-                         </button>
-                     </div>
-                 </div>
-             </form>
 
              <!-- Right navbar links -->
              <ul class="navbar-nav ml-auto">
@@ -65,55 +47,16 @@
 
              <!-- Sidebar -->
              <div class="sidebar">
-                 <!-- Sidebar user (optional) -->
-                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                     <div class="image">
-                         <img src="~/theme/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-                     </div>
-                     <div class="info">
-                         <a href="#" class="d-block">User</a>
-                     </div>
-                 </div>
-
                  <!-- Sidebar Menu -->
                  <nav class="mt-2">
                      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                          <!-- Add icons to the links using the .nav-icon class
-    with font-awesome or any other icon font library -->
+                          with font-awesome or any other icon font library -->
                          <li class="nav-item">
                              <a asp-area="Identity" asp-page="/Account/Manage/Index" class="nav-link">
                                  <i class="far fa-user-alt nav-icon font-weight-bold"></i>
                                  <p>Profile</p>
                              </a>
-                         </li>
-                         <li class="nav-item has-treeview">
-                             <a href="#" class="nav-link">
-                                 <i class="nav-icon fas fa-tachometer-alt"></i>
-                                 <p>
-                                     Dashboard
-                                     <i class="right fas fa-angle-left"></i>
-                                 </p>
-                             </a>
-                             <ul class="nav nav-treeview">
-                                 <li class="nav-item">
-                                     <a href="../../index.html" class="nav-link">
-                                         <i class="far fa-circle nav-icon"></i>
-                                         <p>Dashboard v1</p>
-                                     </a>
-                                 </li>
-                                 <li class="nav-item">
-                                     <a href="../../index2.html" class="nav-link">
-                                         <i class="far fa-circle nav-icon"></i>
-                                         <p>Dashboard v2</p>
-                                     </a>
-                                 </li>
-                                 <li class="nav-item">
-                                     <a href="../../index3.html" class="nav-link">
-                                         <i class="far fa-circle nav-icon"></i>
-                                         <p>Dashboard v3</p>
-                                     </a>
-                                 </li>
-                             </ul>
                          </li>
                          <li class="nav-item has-treeview">
                              <a href="#" class="nav-link">
@@ -125,21 +68,21 @@
                              </a>
                              <ul class="nav nav-treeview">
                                  <li class="nav-item">
-                                     <a href="../charts/chartjs.html" class="nav-link">
+                                     <a asp-controller="Charts" asp-action="Index" class="nav-link">
                                          <i class="far fa-circle nav-icon"></i>
-                                         <p>ChartJS</p>
+                                         <p>Pie Chart</p>
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="../charts/flot.html" class="nav-link">
                                          <i class="far fa-circle nav-icon"></i>
-                                         <p>Flot</p>
+                                         <p>Bar Chart</p>
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="../charts/inline.html" class="nav-link">
                                          <i class="far fa-circle nav-icon"></i>
-                                         <p>Inline</p>
+                                         <p>Line Chart</p>
                                      </a>
                                  </li>
                              </ul>
