implement second statistic with raw sql

--- a/Timesheets/Views/Charts/Index.cshtml
+++ b/Timesheets/Views/Charts/Index.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
+<canvas id="PieChart" width="300" height="200"></canvas>
 <canvas id="BarChart" width="300" height="200"></canvas>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
@@ -29,13 +29,14 @@
 
 
         function renderChart(labels, data) {
-            var ctx = document.getElementById("BarChart");
+            var ctx = document.getElementById("PieChart");
             var chart = new Chart(ctx, {
-                type: 'bar',
+                type: 'pie',
                 data: {
                     labels: labels,
                     datasets: [{
-                        label: 'Hour Per TimeSheet', data: data,
+                        label: 'Hour Per TimeSheet',
+                        data: data,
                         backgroundColor: [
                         'rgba(255, 99, 132, 0.2)',
                         'rgba(54, 162, 235, 0.2)',
@@ -60,12 +61,68 @@
                     yAxes: [{
                         ticks: {   beginAtZero: true  }
                     }]
-                    }       
+                    }
                 }
             });
         }
     </script>
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                type: "GET",
+                contentType: "application/json",
+                url: '@Url.Action("GetProjectsPerTime", "Charts")',
+            }).done(function (result) {
+                var labelsArray = [];
+                var dataArray = [];
+                $.each(result, function (index, data) {
+                    labelsArray.push(data.projectName);
+                    dataArray.push(data.projectCost);
+                });
+                renderChart(labelsArray, dataArray);
+            })
 
+        });
+
+
+        function renderChart(labels, data) {
+            var ctx = document.getElementById("BarChart");
+            var chart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        label: 'Hour Per Project',
+                        data: data,
+                        backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                        ],
+                        borderColor: [
+                        'rgba(255,99,132,1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {   beginAtZero: true  }
+                    }]
+                    }
+                }
+            });
+        }
+    </script>
 }
 
 
